--- a/members.html
+++ b/members.html
@@ -8,20 +8,30 @@
 </head>
 <body>
   <header>
-    <div class="navbar">
-      <div class="logo">Logo</div>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="linkedin.html">LinkedIn</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="members.html" class="active">Members/Consortium</a></li>
-          <li><a href="news.html">News</a></li>
-          <li><a href="deliverables.html">Deliverables</a></li>
-          <li><a href="contacts.html">Contacts</a></li>
-        </ul>
-      </nav>
-    </div>
+  <div class="navbar">
+  <div class="logo">
+    <a href="index.html">
+      <img src="images/logo.png" alt="AeroNet Logo" style="width:40%;height:40%;">
+    </a>
+    <a href="https://www.linkedin.com/company/msca-aeronet/" class="socialmedia-link" target="_blank">
+      <img src="images/linkedIn.png" alt="LinkedIn" style="width:18px; height:18px; vertical-align:middle;">
+    </a>
+    <a href="https://x.com/MSCA_AeroNet" class="socialmedia-link" target="_blank">
+      <img src="images/x.png" alt="X" style="width:18px; height:18px; vertical-align:middle;">
+    </a>
+  </div>
+
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="members.html">Members/Consortium</a></li>
+        <li><a href="news.html">News</a></li>
+        <li><a href="deliverables.html">Deliverables</a></li>
+        <li><a href="contacts.html">Contacts</a></li>
+      </ul>
+    </nav>
+  </div>
   </header>
 
   <main>
