Added a title Aeronet

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
   <!-- MAIN -->
   <main>
     <section class="image-section">
-      <img src="images/NTN_image.png" alt="Project image" />
+      <div class="image-overlay">
+        <h1 class="image-title">AeroNet</h1>
+      </div>
+      <img src="images/NTN_image.png" alt="Project image">
     </section>
 
     <section class="text-section">
