--- a/members.html
+++ b/members.html
@@ -37,7 +37,7 @@
   <main>
     <section class="text-section">
       <h1>Members / Consortium</h1>
-      <p>List all participating organizations and partners here.</p>
+      <p>We will list all participating organizations and partners here and use a map.</p>
     </section>
   </main>
 
