Refactor navigation and layout across multiple pages
- Updated page titles to "Members | Consortium Project" for consistency.
- Enhanced the navigation bar with a hamburger menu for better mobile responsiveness.
- Improved logo and social media link styling for better alignment and hover effects.
- Added a map section in members.html with interactive pins for locations.
- Included JavaScript file reference in all pages for functionality.

--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Consortium Project | Home</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="images/logo.png">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Members | Consortium Project</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- HEADER -->
   <header>
   <div class="navbar">
-  <div class="logo">
-    <a href="index.html">
-      <img src="images/logo.png" alt="AeroNet Logo" style="width:40%;height:40%;">
-    </a>
-    <a href="https://www.linkedin.com/company/msca-aeronet/" class="socialmedia-link" target="_blank">
-      <img src="images/linkedIn.png" alt="LinkedIn" style="width:18px; height:18px; vertical-align:middle;">
-    </a>
-    <a href="https://x.com/MSCA_AeroNet" class="socialmedia-link" target="_blank">
-      <img src="images/x.png" alt="X" style="width:18px; height:18px; vertical-align:middle;">
-    </a>
-  </div>
+    <div class="logo">
+      <a href="index.html">
+        <img src="images/logo.png" alt="AeroNet Logo" class="logo-img">
+      </a>
+      <div class="social-media-container">
+        <a href="https://www.linkedin.com/company/msca-aeronet/" class="socialmedia-link" target="_blank">
+          <img src="images/linkedIn.png" alt="LinkedIn">
+        </a>
+        <a href="https://x.com/MSCA_AeroNet" class="socialmedia-link" target="_blank">
+          <img src="images/x.png" alt="X">
+        </a>
+      </div>
+    </div>
 
-    <nav>
+    <nav class="nav-links">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
@@ -33,6 +33,11 @@
         <li><a href="contacts.html">Contacts</a></li>
       </ul>
     </nav>
+    <div class="hamburger">
+      <div class="line1"></div>
+      <div class="line2"></div>
+      <div class="line3"></div>
+    </div>
   </div>
   </header>
 
@@ -65,7 +70,7 @@ organizing networks (SON) and network optimization technologies.
       </p>
     </section>
   </main>
-
+  <script src="app.js"></script>
   <!-- FOOTER -->
   <footer>
     <div class="eu-statement">
