--- a/deliverables.html
+++ b/deliverables.html
@@ -3,25 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Deliverables</title>
+  <title>Members | Consortium Project</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
   <div class="navbar">
-  <div class="logo">
-    <a href="index.html">
-      <img src="images/logo.png" alt="AeroNet Logo" style="width:40%;height:40%;">
-    </a>
-    <a href="https://www.linkedin.com/company/msca-aeronet/" class="socialmedia-link" target="_blank">
-      <img src="images/linkedIn.png" alt="LinkedIn" style="width:18px; height:18px; vertical-align:middle;">
-    </a>
-    <a href="https://x.com/MSCA_AeroNet" class="socialmedia-link" target="_blank">
-      <img src="images/x.png" alt="X" style="width:18px; height:18px; vertical-align:middle;">
-    </a>
-  </div>
+    <div class="logo">
+      <a href="index.html">
+        <img src="images/logo.png" alt="AeroNet Logo" class="logo-img">
+      </a>
+      <div class="social-media-container">
+        <a href="https://www.linkedin.com/company/msca-aeronet/" class="socialmedia-link" target="_blank">
+          <img src="images/linkedIn.png" alt="LinkedIn">
+        </a>
+        <a href="https://x.com/MSCA_AeroNet" class="socialmedia-link" target="_blank">
+          <img src="images/x.png" alt="X">
+        </a>
+      </div>
+    </div>
 
-    <nav>
+    <nav class="nav-links">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
@@ -31,6 +33,11 @@
         <li><a href="contacts.html">Contacts</a></li>
       </ul>
     </nav>
+    <div class="hamburger">
+      <div class="line1"></div>
+      <div class="line2"></div>
+      <div class="line3"></div>
+    </div>
   </div>
   </header>
 
@@ -40,7 +47,7 @@
       <p>List all participating organizations and partners here.</p>
     </section>
   </main>
-
+  <script src="app.js"></script>
   <footer>
     <div class="eu-statement">
       <img src="https://upload.wikimedia.org/wikipedia/commons/b/b7/Flag_of_Europe.svg" alt="EU Flag">
