--- a/test.html-members.html
+++ b/test.html-members.html
@@ -43,16 +43,27 @@
 
   <main>
     <section class="text-section">
-      <h1>News </h1>
-      <p>List all participating organizations and partners here.</p>
+      <h1>Members / Consortium</h1>
+      <p>We will list all participating organizations and partners here and use a map.</p>
+    </section>
+    <section class="image-section">
+      <div class="map-container">
+        <img src="europe.png" alt="Map of Europe">
+        <div class="pin pin-Greece"><span>Greece</span></div>
+        <div class="pin pin-London"><span>London</span></div>
+        <div class="pin pin-Estonia"><span>Estonia</span></div>
+        <div class="pin pin-Germany"><span>Germany</span></div>
+        <div class="pin pin-Cyprus"><span>Cyprus</span></div>
+      </div>
     </section>
   </main>
-  <script src="app.js"></script>
+
   <footer>
     <div class="eu-statement">
       <img src="https://upload.wikimedia.org/wikipedia/commons/b/b7/Flag_of_Europe.svg" alt="EU Flag">
       <p>This project has received funding from the European Union’s Horizon Europe programme under grant agreement No. XXXX.</p>
     </div>
   </footer>
-</body>
+
+  <script src="app.js"></script> </body>
 </html>
