Remove outdated image files and update image source in members.html for correct path

--- a/members.html
+++ b/members.html
@@ -48,7 +48,7 @@
     </section>
     <section class="image-section">
       <div class="map-container">
-        <img src="europe.png" alt="Map of Europe">
+        <img src="images/europe.png" alt="Map of Europe">
         <div class="pin pin-Greece"><span>Greece</span></div>
         <div class="pin pin-London"><span>London</span></div>
         <div class="pin pin-Estonia"><span>Estonia</span></div>
