--- a/deliverables.html
+++ b/deliverables.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Members | Consortium Project</title>
+  <link rel="icon" type="image/png" href="images/AeroNetlogo1.png">
+  <title>Deliverables | Consortium Project</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +12,7 @@
   <div class="navbar">
     <div class="logo">
       <a href="index.html">
-        <img src="images/logo.png" alt="AeroNet Logo" class="logo-img">
+        <img src="images/AeroNetlogo1.png" alt="AeroNet Logo" class="logo-img">
       </a>
       <div class="social-media-container">
         <a href="https://www.linkedin.com/company/msca-aeronet/" class="socialmedia-link" target="_blank">
