Made the images transparent etc.

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
   <main>
     <section class="image-section">
       <img src="images/aero.png" alt="Project image">
+      <h1 class="overlay-text">AERONET</h1>
     </section>
 
     <section class="text-section">
