Updated the News section

--- a/news.html
+++ b/news.html
@@ -43,10 +43,19 @@
   </header>
 
   <main>
-    <section class="text-section">
-      <h1>News </h1>
-      <p>List all participating organizations and partners here.</p>
-    </section>
+
+    <h1>Project News</h1>
+    <!-- Example of one news item -->
+    <article class="news-item">
+      <a href="news/news-aeronet-start.html" class="news-link">
+        <img src="images/AeroNetLogo.png" alt="AeroNet Project Start" class="news-image">
+        <div class="news-summary">
+          <h2>AeroNet Official Start – October 1, 2025</h2>
+          <p>The AeroNet project officially began on October 1, 2025, marking the start of an ambitious EU-funded collaboration...</p>
+          <p class="read-more">Read more →</p>
+        </div>
+      </a>
+    </article>
   </main>
   <script src="app.js"></script>
   <footer>
