Updated grant ID

--- a/contacts.html
+++ b/contacts.html
@@ -110,16 +110,16 @@
       <h2>Project Information</h2>
       <div class="project-info">
         <div class="info-item">
-          <strong>Project Duration:</strong> [Start Date] - [End Date]
+          <strong>Project Duration:</strong> 01 Oct 2025 - 30 September 2029
         </div>
         <div class="info-item">
-          <strong>Funding:</strong> European Union's Horizon Europe programme
+          <strong>Funding:</strong> European Union's Horizon Europe programme (<a href="https://ec.europa.eu/info/funding-tenders/opportunities/portal/screen/programmes/horizon">Horizon</a>)
         </div>
         <div class="info-item">
-          <strong>Grant Agreement:</strong> No. [Grant Number]
+          <strong>Grant Agreement:</strong> Project ID: <a href="https://ec.europa.eu/info/funding-tenders/opportunities/portal/screen/opportunities/projects-details/43108390/101236523/HORIZON?order=DESC&pageNumber=1&pageSize=10&sortBy=relevance&keywords=aeronet"> 101236523 </a>
         </div>
         <div class="info-item">
-          <strong>Project Type:</strong> Marie Skłodowska-Curie Actions (MSCA)
+          <strong>Project Type:</strong> Marie Skłodowska-Curie Actions (MSCA) Staff Exchanges 2024 (<a href = https://ec.europa.eu/info/funding-tenders/opportunities/portal/screen/opportunities/topic-details/horizon-msca-2024-se-01-01>HORIZON-MSCA-2024-SE-01</a>)
         </div>
       </div>
     </section>
@@ -130,7 +130,7 @@
   <footer>
     <div class="eu-statement">
       <img src="https://upload.wikimedia.org/wikipedia/commons/b/b7/Flag_of_Europe.svg" alt="EU Flag" />
-      <p>This project has received funding from the European Union's Horizon Europe programme under grant agreement No. XXXX.</p>
+      <p>This project has received funding from the European Union's Horizon Europe programme under grant ID 101236523.</p>
     </div>
   </footer>
 </body>
