--- a/news.html
+++ b/news.html
@@ -61,7 +61,7 @@
   <footer>
     <div class="eu-statement">
       <img src="https://upload.wikimedia.org/wikipedia/commons/b/b7/Flag_of_Europe.svg" alt="EU Flag">
-      <p>This project has received funding from the European Union’s Horizon Europe programme under grant agreement No. XXXX.</p>
+      <p>This project has received funding from the European Union's Horizon Europe programme under grant agreement No. 101236523.</p>
     </div>
   </footer>
 </body>
