--- a/members.html
+++ b/members.html
@@ -45,16 +45,20 @@
   <main>
     <section class="text-section">
       <h1>Members / Consortium</h1>
-      <p>We will list all participating organizations and partners here and use a map.</p>
+      <p>List all participating organizations and partners here.</p>
     </section>
     <section class="image-section">
       <div class="map-container">
         <img src="images/europe.png" alt="Map of Europe">
-        <div class="pin pin-Greece"><span>Greece</span></div>
-        <div class="pin pin-London"><span>London</span></div>
-        <div class="pin pin-Estonia"><span>Estonia</span></div>
-        <div class="pin pin-Germany"><span>Germany</span></div>
-        <div class="pin pin-Cyprus"><span>Cyprus</span></div>
+        <div class="pin pin-Italy"><span>UNIVERSITA DEGLI STUDI DI TRENTO</span></div>
+        <div class="pin pin-LSBU"><span>LONDON SOUTH<br>BANK UNIVERSITY</span></div>
+        <div class="pin pin-Bradford"><span> UNIVERSITY OF BRADFORD</span></div>
+        <div class="pin pin-Germany"><span>TECHNISCHE UNIVERSITAET DRESDEN</span></div>
+        <div class="pin pin-Greece"><span>ETHNIKO KAI KAPODISTRIAKO</span></div>
+        <div class="pin pin-Greece-1"><span>FOGUS INNOVATIONS & SERVICES P.C.</span></div>
+        <div class="pin pin-Cyprus"><span>SIGINT<br>SOLUTIONS LTD</span></div>
+        <div class="pin pin-Estonia"><span>JIO ESTONIA OÜ</span></div>
+        
       </div>
     </section>
   </main>
