--- a/contacts.html
+++ b/contacts.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="images/AeroNetlogo1.png">
+  <link rel="icon" type="image/png" href="images/AeroNetLogo.png">
   <title>Contacts | AeroNet</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -83,11 +83,10 @@
       <h2>Project Coordinator</h2>
       <div class="coordinator-info">
         <div class="coordinator-details">
-          <h3>Dr. [Coordinator Name]</h3>
-          <p><strong>Institution:</strong> [University/Organization Name]</p>
-          <p><strong>Department:</strong> [Department Name]</p>
+          <h3>Prof. Tasos</h3>
+          <p><strong>Institution:</strong> London South Bank University</p>
+          <p><strong>Department:</strong> </p>
           <p><strong>Email:</strong> <a href="mailto:coordinator@aeronet-project.eu">coordinator@aeronet-project.eu</a></p>
-          <p><strong>Phone:</strong> +[Country Code] [Phone Number]</p>
         </div>
       </div>
     </section>
