added Tasos Information

--- a/contacts.html
+++ b/contacts.html
@@ -83,10 +83,10 @@
       <h2>Project Coordinator</h2>
       <div class="coordinator-info">
         <div class="coordinator-details">
-          <h3>Prof. Tasos</h3>
+          <h3>Prof. Tasos Dagiuklas</h3>
           <p><strong>Institution:</strong> London South Bank University</p>
-          <p><strong>Department:</strong> </p>
-          <p><strong>Email:</strong> <a href="mailto:coordinator@aeronet-project.eu">coordinator@aeronet-project.eu</a></p>
+          <p><strong>Department:Computer Science and Informatics</strong> </p>
+          <p><strong>Email:</strong> <a href="mailto:coordinator@aeronet-project.eu">tdagiuklas@lsbu.ac.uk</a></p>
         </div>
       </div>
     </section>
