--- a/members.html
+++ b/members.html
@@ -52,7 +52,7 @@
       <div class="members-container">
         <div class="member-card">
           <div class="member-info">
-            <div class="member-name">LONDON SOUTH BANK UNIVERSITY LBG</div>
+            <div class="member-name">LONDON SOUTH BANK UNIVERSITY</div>
             <div class="member-role">coordinator | United Kingdom</div>
           </div>
         </div>
