Added news item
Wanted to show 2 news items before meeting with Tasos to discuss layout

--- a/news.html
+++ b/news.html
@@ -45,7 +45,17 @@
   <main>
 
     <h1>Project News</h1>
-    <!-- Example of one news item -->
+    <article class="news-item">
+      <a href="news/news-wwrf-conference.html" class="news-link">
+        <img src="images/wwrf.png" alt="AeroNet wins best paper award at wwrf meeting" class="news-image">
+        <div class="news-summary">
+          <h2>AeroNet Wins Best Paper Award – November 6, 2025</h2>
+          <p>AeroNet paper ...</p>
+          <p class="read-more">Read more →</p>
+        </div>
+      </a>
+    </article>
+    
     <article class="news-item">
       <a href="news/news-aeronet-start.html" class="news-link">
         <img src="images/AeroNetLogo.png" alt="AeroNet Project Start" class="news-image">
