--- a/contacts.html
+++ b/contacts.html
@@ -46,37 +46,7 @@
   <main>
     <section class="text-section">
       <h1>Get in Touch</h1>
-      <p>We'd love to hear from you! Whether you have questions about our research, want to collaborate, or simply want to learn more about AeroNet, we're here to help.</p>
-    </section>
-
-    <section class="contact-grid">
-      <div class="contact-card">
-        <div class="contact-icon">📧</div>
-        <h3>General Inquiries</h3>
-        <p>For general questions about the AeroNet project</p>
-        <a href="mailto:info@aeronet-project.eu" class="contact-link">info@aeronet-project.eu</a>
-      </div>
-
-      <div class="contact-card">
-        <div class="contact-icon">🤝</div>
-        <h3>Collaboration</h3>
-        <p>Interested in partnering with us?</p>
-        <a href="mailto:collaboration@aeronet-project.eu" class="contact-link">collaboration@aeronet-project.eu</a>
-      </div>
-
-      <div class="contact-card">
-        <div class="contact-icon">📰</div>
-        <h3>Media & Press</h3>
-        <p>For media inquiries and press releases</p>
-        <a href="mailto:press@aeronet-project.eu" class="contact-link">press@aeronet-project.eu</a>
-      </div>
-
-      <div class="contact-card">
-        <div class="contact-icon">🎓</div>
-        <h3>Academic</h3>
-        <p>Research collaborations and academic partnerships</p>
-        <a href="mailto:academic@aeronet-project.eu" class="contact-link">academic@aeronet-project.eu</a>
-      </div>
+      <p>We'd love to hear from you! Whether you have questions about our research, want to collaborate, or simply want to learn more about AeroNet, just get in touch.</p>
     </section>
 
     <section class="text-section">
