--- a/about.html
+++ b/about.html
@@ -46,15 +46,25 @@
     <section class="text-section">
       <h1>About the Project</h1>
       <p>
-        The 5G business case extend towards the air where in-flight broadband connectivity (IFBC) will be a reality. The market has taken a step in this direction by introducing DA2G (Direct Air-to-Ground) mobile services that is able to guarantee LTE (4G) speeds (data limited to 75Mbps per cell). Moreover, this capacity has to be shared with several aircrafts and shared by on board passengers. <br>
-        
-        In response to aviation stakeholders towards IFBC services, the Next Generation Mobile Alliance (NGMN) has proposed Key Performance Indicators (KPI) for beyond 5G use-cases targeting mobile backhauling for aircrafts. Based on their estimations, each user will have 15/(7.5) Mb/s download/(upload), so that 1.2/(0.6) Gb/s download/(upload) speed is required per aircraft, assuming 20% active users per aircraft and 400 passengers in each aircraft. To achieve these anticipated data rates, quite clearly there is a need for enhanced utilization of spectrum, radio resource and network management and antenna technologies that current systems cannot deliver. 
-        To valide the proof-of-concept, experimentation in the lab is the next step on the technology readiness ladder. However, there are limited system level simulation tools that can capture fully the dynamics of the aerial networking medium to test airbourne radio protocols/algorithms, where existing solutions are either confined to 2D network modelling space suitable for legacy ground based networks, or providing minor capability on modelling practical scenarios. <br>
-
-        This SE (staff exchange) action referred to as AeroNet, aims to advance 5G-based aerial networking protocols and to demonstrate attainable performance through experimentation on a 3D system level simulator to deliver new insights on the performance benefits of analytical design approaches. This will be achieved by implementing the research goal through planned staff exchanges, that will also promote staff training through the transfer of knowledge based on international collaborations and secondments.
+        AeroNet builds on ongoing 3GPP standardization trends and relevant market scenarios to deliver a 5G NRNTN network and experimental platform for enabling IFBC services. This initiative, referred to as “AeroNet,” aims to merge disciplinary research fields encompassing intelligent systems, mobile and satellite communications, and practical experimentation covering analysis, simulation, and validation.
       </p>
       <p>
-        For further information regarding the project and the EU grant approval, please check the <a href="https://ec.europa.eu/info/funding-tenders/opportunities/portal/screen/opportunities/projects-details/43108390/101236523/HORIZON?order=DESC&pageNumber=1&pageSize=10&sortBy=relevance&keywords=aeronet"> EU Funding & Tenders Portal </a> 
+        In addition to advancing innovation in aerial networking and simulation tool development, the research approach is the basis for a SE (staff exchange) training action (industry-academic partnership), designed to enhance both the career potential of staff members and innovation capacity at the institutional level.
+      </p>
+
+      <h2>AeroNet has defined the following objectives:</h2>
+      <div class="objectives">
+        <ul>
+          <li>Design a new evolutionary architecture to provide integrated terrestrial-aerial-satellite connectivity as part of the 6G paradigm to ensure a seamless 5G QoS experience, including lower RTD through exploiting Non-GSO constellations.</li>
+          <li>Design and validate next-generation aerial networking protocols with enhanced interference management, mobility resilience, and non-orthogonal access techniques. Develop and integrate conformal, aircraft-optimized antenna solutions for reliable, high-performance in-flight connectivity.</li>
+          <li>Design AI-based Self-Organised Networks for network management in aerial networks.</li>
+          <li>Extend conventional 2D system-level simulators with full 3D spatial modelling capabilities tailored to aerial network dynamics, including altitude-dependent propagation and mobility. Develop Monte-Carlo based frameworks for accurate 3D interference, trajectory evolution, and aerial-to-ground link behavior, and validate these enhanced 3D SLS tools through representative aerial deployment scenarios.</li>
+        </ul>
+      </div>
+
+      <p>
+        For further information regarding the project and the EU grant approval, please check the 
+        <a href="https://ec.europa.eu/info/funding-tenders/opportunities/portal/screen/opportunities/projects-details/43108390/101236523/HORIZON?order=DESC&pageNumber=1&pageSize=10&sortBy=relevance&keywords=aeronet" target="_blank">EU Funding & Tenders Portal</a>.
       </p>
     </section>
   </main>
