Added table for deliverables

--- a/deliverables.html
+++ b/deliverables.html
@@ -46,6 +46,74 @@
     <section class="text-section">
       <h1>Deliverables</h1>
     </section>
+    <div class="aeronet-table-wrapper">
+      <table class="aeronet-table">
+        <thead>
+          <tr>
+            <th>Deliverable ID</th>
+            <th>Title</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>D1.1</td>
+            <td>AeroNet Survey, scenarios, use-cases, system requirements and architecture</td>
+          </tr>
+          <tr>
+            <td>D1.2</td>
+            <td>Business Model Definition</td>
+          </tr>
+          <tr>
+            <td>D2.1</td>
+            <td>Advanced Radio Protocols and Antennas for 5G Aerial Networks</td>
+          </tr>
+          <tr>
+            <td>D3.1</td>
+            <td>Network and Spectrum Management for 5G Aerial Networks</td>
+          </tr>
+          <tr>
+            <td>D4.1</td>
+            <td>AeroNet: Demonstration Scenarios and Technology Selection</td>
+          </tr>
+          <tr>
+            <td>D4.2</td>
+            <td>Implementation Architecture, Modules and Measurement Test Plan</td>
+          </tr>
+          <tr>
+            <td>D4.3</td>
+            <td>Integration Test Report and Product Evaluation</td>
+          </tr>
+          <tr>
+            <td>D5.1</td>
+            <td>Project handbook &amp; Web Site</td>
+          </tr>
+          <tr>
+            <td>D5.2</td>
+            <td>Data Management Plan</td>
+          </tr>
+          <tr>
+            <td>D5.3</td>
+            <td>Green Charter Training Event</td>
+          </tr>
+          <tr>
+            <td>D5.4</td>
+            <td>Plan for dissemination and exploitation including communication activities</td>
+          </tr>
+          <tr>
+            <td>D5.5</td>
+            <td>Public Events</td>
+          </tr>
+          <tr>
+            <td>D5.6</td>
+            <td>Progress report</td>
+          </tr>
+          <tr>
+            <td>D5.7</td>
+            <td>Mid-term meeting</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </main>
   <script src="app.js"></script>
   <footer>
