--- a/members.html
+++ b/members.html
@@ -52,7 +52,7 @@
       <div class="map-container">
         <img src="images/europe.png" alt="Map of Europe">
         
-        <a href="https://www.lsbu.ac.uk/" target="_blank" rel="noopener noreferrer">
+        <a href="https://www.unitn.it/" target="_blank" rel="noopener noreferrer">
           <div class="pin pin-Italy">
             <span>
               <img src="images/Logos_for_participants/Trento.png">
