--- a/members.html
+++ b/members.html
@@ -65,7 +65,7 @@
           <div class="pin pin-LSBU">
             <span>
               <img src="images/Logos_for_participants/LSBU.png">
-              LONDON SOUTH<br>BANK UNIVERSITY
+              LONDON SOUTH BANK UNIVERSITY
             </span>
           </div>
         </a>
@@ -110,7 +110,7 @@
           <div class="pin pin-Cyprus">
             <span>
               <img src="images/Logos_for_participants/Sigint.png">
-              SIGINT<br>SOLUTIONS LTD
+              SIGINT SOLUTIONS LTD
             </span>
           </div>
         </a>
