--- a/members.html
+++ b/members.html
@@ -45,7 +45,7 @@
   <main>
     <section class="text-section">
       <h1>Participants</h1>
-      <p>List of all participating organizations and partners in the AeroNet consortium.</p>
+      <p>Map of all participating organizations and partners in the AeroNet consortium. Hover over the pins for more information.</p>
     </section>
     
     <section class="image-section">
